--- a/public/ta/css/style.css
+++ b/public/ta/css/style.css
@@ -404,6 +404,11 @@
       font-weight: 700;
       font-size: 2rem;
     }
+    .shadow-box {
+    box-shadow: 0 4px 15px rgba(0,0,0,0.15);
+    background-color: #fff;
+}
+
 
 /*** Testimonial ***/
 .testimonial-carousel::before {
@@ -475,6 +480,14 @@
 .testimonial-carousel .owl-dot.active {
     background: var(--primary);
     border-color: var(--primary);
+}
+.section-title {
+    position: relative;
+    display: inline-block;
+    text-transform: uppercase;
+    font-weight: bold;
+    margin-bottom: 1rem;
+    z-index: 1; /* tambahkan ini */
 }
 
 
