--- a/public/ta/css/style.css
+++ b/public/ta/css/style.css
@@ -259,6 +259,14 @@
         height: 300px;
     }
 }
+.card {
+    border-radius: 1.25rem; /* sama seperti rounded-4 */
+    transition: transform 0.2s ease-in-out;
+}
+.card:hover {
+    transform: scale(1.02);
+    box-shadow: 0 8px 24px rgba(0, 0, 0, 0.1);
+}
 
 
 
