--- a/public/ta/css/style.css
+++ b/public/ta/css/style.css
@@ -497,6 +497,32 @@
     margin-bottom: 1rem;
     z-index: 1; /* tambahkan ini */
 }
+    .swiper {
+        width: 100%;
+        padding-bottom: 50px; /* jarak ke pagination dots */
+    }
+
+    .swiper-slide {
+        display: flex;
+        justify-content: center;
+    }
+
+    .swiper-pagination {
+        margin-top: 10px; /* jarak dots */
+    }
+
+    .card {
+        width: 320px;
+    }
+
+    .card-img-top {
+        height: 200px;
+        object-fit: cover;
+    }
+.swiper-pagination {
+    margin-top: 40px !important;
+}
+
 
 
 
